[package]
name = "code_logger"
version = "0.1.0"
authors = ["Yogya <yogya.coder@gmail.com>"]
edition = "2021"
description = "A simple, colorful, and flexible logging library for Rust with support for timestamps, log levels, and custom error codes. Built using a **builder pattern** for ergonomic usage.
"
license = "MIT"
repository = "https://github.com/lilcloudcoder/RustCode_Logger"

[dependencies]
# No external dependencies
[dependencies]
chrono = "0.4.42"
